[gd_scene load_steps=7 format=2]

[ext_resource path="res://placeholders/green.png" type="Texture" id=1]
[ext_resource path="res://testNPC.tscn" type="PackedScene" id=2]
[ext_resource path="res://placeholders/blue.png" type="Texture" id=3]
[ext_resource path="res://PlayerTest.gd" type="Script" id=5]
[ext_resource path="res://TestBump.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 53 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 1095.88, 393.859 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 3, 10 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource( 1 )

[node name="LeanIndicator" type="Sprite" parent="Player"]
position = Vector2( 0, -70 )
scale = Vector2( 1, 7 )
texture = ExtResource( 3 )
offset = Vector2( 0, -7 )

[node name="NPC" parent="." instance=ExtResource( 2 )]

[node name="NPC2" parent="." instance=ExtResource( 2 )]
position = Vector2( 171.161, 381.26 )

[node name="NPC3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1019.88, 392.599 )

[node name="NPC4" parent="." instance=ExtResource( 2 )]
position = Vector2( 238.73, 357.321 )

[node name="NPC5" parent="." instance=ExtResource( 2 )]
position = Vector2( 323.145, 369.921 )

[node name="NPC6" parent="." instance=ExtResource( 2 )]
position = Vector2( 896.409, 396.379 )

[node name="NPC7" parent="." instance=ExtResource( 2 )]
position = Vector2( 814.514, 403.939 )

[node name="NPC8" parent="." instance=ExtResource( 2 )]
position = Vector2( 679.703, 359.841 )

[node name="NPC9" parent="." instance=ExtResource( 2 )]
position = Vector2( 416.379, 354.802 )

[connection signal="area_entered" from="Player/Area2D" to="Player" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Player/Area2D" to="Player" method="_on_Area2D_area_exited"]
